--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
   <body>
     <h1 class="header">SITHS Movie Database</h1>
     <h2 class="top-rated">Our Top Rated Movies</h2>
+    <h2 class="search-header">
+      <a class="search-header-link" href="search.html"
+        >Looking For Something Specific?</a
+      >
+    </h2>
     <section class="movie-grid">
       <!--  <div class="movie-card">
         <div class="movie-card-front">
