--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
+    <button class="btn-prev">Previous</button>
+    <button class="btn-next">NEXT</button>
     <h1 class="header">SITHS Movie Database</h1>
     <h2 class="top-rated">Our Top Rated Movies</h2>
     <h2 class="search-header">
