--- a/src/search.html
+++ b/src/search.html
@@ -6,6 +6,8 @@
     <title>Document</title>
   </head>
   <body>
+    <button class="btn-prev">Previous</button>
+    <button class="btn-next">NEXT</button>
     <h1 class="search-header">Search</h1>
     <form id="search-form" class="search-form">
       <textarea
